[tool.poetry]
name = "auto-white-balance-gw"
version = "0.1.0"
description = ""
authors = ["Justica <atsuronreplaced@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
